src/objects/Doc_Field__c.object
<CustomObject>
    <fields>
        <fullName>Doc_SObject__c</fullName>
        <description>System generated</description>
        <inlineHelpText>System generated</inlineHelpText>
        <label>Doc SObject</label>
        <referenceTo>Doc_SObject__c</referenceTo>
        <relationshipLabel>Doc Fields</relationshipLabel>
        <relationshipName>Doc_Fields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <description>System generated</description>
        <externalId>true</externalId>
        <inlineHelpText>System generated</inlineHelpText>
        <label>ExtId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>InlineHelpText__c</fullName>
        <description>System generated</description>
        <inlineHelpText>System generated</inlineHelpText>
        <label>Inline Help Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsCustom__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System generated</description>
        <inlineHelpText>System generated</inlineHelpText>
        <label>Is Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <description>System generated</description>
        <inlineHelpText>System generated</inlineHelpText>
        <label>Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>My_Picklist__c</fullName>
        <label>My Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>004</fullName>
                    <label>Example 1</label>
                </value>
                <value>
                    <fullName>123</fullName>
                    <label>Example 2</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PicklistValues__c</fullName>
        <description>System generated</description>
        <inlineHelpText>System generated</inlineHelpText>
        <label>Picklist Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MetadataStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>System generated</description>
        <inlineHelpText>System generated</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>address</fullName>
                </value>
                <value>
                    <fullName>anytype</fullName>
                </value>
                <value>
                    <fullName>base64</fullName>
                </value>
                <value>
                    <fullName>Boolean</fullName>
                </value>
                <value>
                    <fullName>Combobox</fullName>
                </value>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>DataCategoryGroupReference</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>DateTime</fullName>
                </value>
                <value>
                    <fullName>Double</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>EncryptedString</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>Integer</fullName>
                </value>
                <value>
                    <fullName>Long</fullName>
                </value>
                <value>
                    <fullName>MultiPicklist</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Reference</fullName>
                </value>
                <value>
                    <fullName>String</fullName>
                </value>
                <value>
                    <fullName>TextArea</fullName>
                </value>
                <value>
                    <fullName>Time</fullName>
                </value>
                <value>
                    <fullName>URL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Doc Field</label>
    <nameField>
        <label>Doc Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Doc Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>